k8s/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: metrics
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        app.openshift.io/connects-to: metrics
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: prometheus
    spec:
      imagePullSecrets:
        - name: docker
      containers:
        - args:
            - --config.file=/config/prometheus.yml
            - --storage.tsdb.path=/prometheus
            - --web.console.libraries=/usr/share/prometheus/console_libraries
            - --web.console.templates=/usr/share/prometheus/consoles
          image: prom/prometheus:v2.0.0
          name: prometheus
          ports:
            - containerPort: 9090
          resources: {}
          volumeMounts:
            - mountPath: /prometheus
              name: prometheus-data
            - mountPath: /config/
              name: prometheus-config
      restartPolicy: Always
      volumes:
        - name: prometheus-data
          persistentVolumeClaim:
            claimName: prometheus-data
        - name: prometheus-config
          configMap:
            name: prometheus-config
status: {}
