k8s/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yml -o k8s
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: grafana
  name: grafana
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana
status:
  loadBalancer: {}
