k8s/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yml -o k8s
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: metrics
  name: metrics
spec:
  ports:
    - name: "9171"
      port: 9171
      targetPort: 9171
  selector:
   app.kubernetes.io/name: metrics
status:
  loadBalancer: {}
