k8s/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yml -o k8s
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: prometheus
  name: prometheus
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    app.kubernetes.io/name: prometheus
status:
  loadBalancer: {}
