k8s/grafana-route.yaml
apiVersion:  route.openshift.io/v1
kind: Route
metadata:
  name: grafana-routes
spec:
  to:
    kind: Service
    name: grafana
